# ycc

./: Cargo.toml  README.md  syntax.ebnf
ast/src/: lib.rs
codegen/: Cargo.toml
codegen/src/: codegen.rs  compiler.rs  error.rs  gen.rs  lib.rs  scope.rs  scopes.rs  ty.rs  util.rs  val.rs  value.rs
docs/: 中间代码生成与目标代码生成.docx  语义分析.docx  语法分析.docx
examples/: .gitignore  arr.sy.c  arr2.sy.c  fib.sy.c  get.c  is_even.c  is_even.sy.c  loop-in-loop-in-loop.sy.c  makefile  newton.sy.c  ppdi.sy.c  put.c
parser/: Cargo.toml  syntax.ebnf  sysy.lalrpop
parser/src/: ast.rs  error.rs  lib.rs  parser.rs  syntax.lalrpop
src/: cli.rs  cmd.rs  main.rs
visual_ast/: Cargo.toml
visual_ast/src/: drawer.rs  lib.rs
visual_ast/src/utils/: mod.rs  rand.rs
visualize/: Cargo.toml
visualize/src/: drawer.rs
