[package]
name = "ycc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "ast" ,"parser", "visual_ast" , "codegen"]

[dependencies]
lalrpop-util = {version = "0.20.0", features = ["lexer", "unicode"]}
miette = { version = "5.10.0", features = ["fancy"] }
clap = { version = "4.4.11", features = ["derive"] }
inkwell = { version = "0.2.0", features = ["llvm16-0"] }
llvm-sys-160 = { package = "llvm-sys", version = "160.1.3", features = ["prefer-static"] }
parser = { path = "parser" }
codegen = { path = "codegen" }
visual_ast = { path = "visual_ast" }
ast = { path = "ast" }
