[package]
name = "codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.50"
rand = "0.8.5"
miette = { version = "5.10.0", features = ["fancy"] }
inkwell = { version = "0.2.0", features = ["llvm16-0"] }
llvm-sys-160 = { package = "llvm-sys", version = "160.1.3", features = ["prefer-static"] }
ast = { path = "../ast" }
