[package]
name = "visual_ast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast" }
parser = { path = "../parser" }
miette = { version = "5.10.0", features = ["fancy"] }
graphviz-rust = "0.6.6"
